--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.1",
-    "grunt-contrib-testem": "^0.5.16"
+    "grunt-contrib-testem": "^0.5.16",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.5"
   },
   "dependencies": {
     "jquery": "^2.1.3",
